# FileSignatureGenerator

./: CMakeLists.txt  README.md  task.txt  test_data.txt
app/: CMakeLists.txt  FileSignatureGenerator.cpp  FileSignatureGenerator.hpp  Prototypes.hpp  main.cpp
app/commandLineUtils/: CommandLineUtils.cpp  CommandLineUtils.hpp
app/exception/: BadFileException.cpp  BadFileException.hpp  Exception.hpp  InvalidBlockSizeException.cpp  InvalidBlockSizeException.hpp
app/fileUtils/: FileUtils.cpp  FileUtils.hpp
app/hash/: CrcHash.cpp  CrcHash.hpp  IHash.hpp
stdafx/: stdafx.hpp
